updated code to handle unix timestamps

--- a/Starter_Files/ETL_Mini_Project_AOtto_JDelaune_KBergman_AaronNotebook.ipynb
+++ b/Starter_Files/ETL_Mini_Project_AOtto_JDelaune_KBergman_AaronNotebook.ipynb
@@ -1320,8 +1320,11 @@
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
     "from datetime import datetime as dt\n",
-    "campaign_df['launched_date'] = pd.to_datetime(campaign_df['launched_date'])\n",
-    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'])"
+    "#campaign_df['launched_date'] = pd.to_datetime(campaign_df['launched_date'], unit='s')\n",
+    "#campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'], unit='s')\n",
+    " \n",
+    "campaign_df[\"launched_date\"] = pd.to_datetime(campaign_df[\"launched_date\"], unit='s').dt.strftime('%Y-%m-%d') \n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"], unit='s').dt.strftime('%Y-%m-%d')    \n"
    ]
   },
   {
@@ -1384,8 +1387,8 @@
        "      <td>64</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.623214800</td>\n",
-       "      <td>1970-01-01 00:00:01.623992400</td>\n",
+       "      <td>2021-06-09</td>\n",
+       "      <td>2021-06-18</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
@@ -1406,8 +1409,8 @@
        "      <td>241</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.607493600</td>\n",
-       "      <td>1970-01-01 00:00:01.622005200</td>\n",
+       "      <td>2020-12-09</td>\n",
+       "      <td>2021-05-26</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/rock</td>\n",
@@ -1428,8 +1431,8 @@
        "      <td>132</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.592110800</td>\n",
-       "      <td>1970-01-01 00:00:01.612850400</td>\n",
+       "      <td>2020-06-14</td>\n",
+       "      <td>2021-02-09</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>film &amp; video/drama</td>\n",
@@ -1450,8 +1453,8 @@
        "      <td>75</td>\n",
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>1970-01-01 00:00:01.625288400</td>\n",
-       "      <td>1970-01-01 00:00:01.625720400</td>\n",
+       "      <td>2021-07-03</td>\n",
+       "      <td>2021-07-08</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>photography/photography books</td>\n",
@@ -1472,8 +1475,8 @@
        "      <td>842</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.636956000</td>\n",
-       "      <td>1970-01-01 00:00:01.638856800</td>\n",
+       "      <td>2021-11-15</td>\n",
+       "      <td>2021-12-07</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>publishing/translations</td>\n",
@@ -1494,8 +1497,8 @@
        "      <td>2043</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.609221600</td>\n",
-       "      <td>1970-01-01 00:00:01.622350800</td>\n",
+       "      <td>2020-12-29</td>\n",
+       "      <td>2021-05-30</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -1516,8 +1519,8 @@
        "      <td>112</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.634274000</td>\n",
-       "      <td>1970-01-01 00:00:01.638252000</td>\n",
+       "      <td>2021-10-15</td>\n",
+       "      <td>2021-11-30</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -1538,8 +1541,8 @@
        "      <td>139</td>\n",
        "      <td>IT</td>\n",
        "      <td>EUR</td>\n",
-       "      <td>1970-01-01 00:00:01.636174800</td>\n",
-       "      <td>1970-01-01 00:00:01.639116000</td>\n",
+       "      <td>2021-11-06</td>\n",
+       "      <td>2021-12-10</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>theater/plays</td>\n",
@@ -1560,8 +1563,8 @@
        "      <td>374</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.602133200</td>\n",
-       "      <td>1970-01-01 00:00:01.618117200</td>\n",
+       "      <td>2020-10-08</td>\n",
+       "      <td>2021-04-11</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>music/indie rock</td>\n",
@@ -1582,8 +1585,8 @@
        "      <td>1122</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.609308000</td>\n",
-       "      <td>1970-01-01 00:00:01.629262800</td>\n",
+       "      <td>2020-12-30</td>\n",
+       "      <td>2021-08-18</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>food/food trucks</td>\n",
@@ -1621,53 +1624,41 @@
        "998      Polarized composite customer loyalty   66600.0   37823.0      failed   \n",
        "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
        "\n",
-       "     backers_count country currency                 launched_date  \\\n",
-       "990             64      US      USD 1970-01-01 00:00:01.623214800   \n",
-       "991            241      US      USD 1970-01-01 00:00:01.607493600   \n",
-       "992            132      US      USD 1970-01-01 00:00:01.592110800   \n",
-       "993             75      IT      EUR 1970-01-01 00:00:01.625288400   \n",
-       "994            842      US      USD 1970-01-01 00:00:01.636956000   \n",
-       "995           2043      US      USD 1970-01-01 00:00:01.609221600   \n",
-       "996            112      US      USD 1970-01-01 00:00:01.634274000   \n",
-       "997            139      IT      EUR 1970-01-01 00:00:01.636174800   \n",
-       "998            374      US      USD 1970-01-01 00:00:01.602133200   \n",
-       "999           1122      US      USD 1970-01-01 00:00:01.609308000   \n",
+       "     backers_count country currency launched_date    end_date  staff_pick  \\\n",
+       "990             64      US      USD    2021-06-09  2021-06-18       False   \n",
+       "991            241      US      USD    2020-12-09  2021-05-26       False   \n",
+       "992            132      US      USD    2020-06-14  2021-02-09       False   \n",
+       "993             75      IT      EUR    2021-07-03  2021-07-08       False   \n",
+       "994            842      US      USD    2021-11-15  2021-12-07       False   \n",
+       "995           2043      US      USD    2020-12-29  2021-05-30       False   \n",
+       "996            112      US      USD    2021-10-15  2021-11-30       False   \n",
+       "997            139      IT      EUR    2021-11-06  2021-12-10       False   \n",
+       "998            374      US      USD    2020-10-08  2021-04-11       False   \n",
+       "999           1122      US      USD    2020-12-30  2021-08-18       False   \n",
        "\n",
-       "                         end_date  staff_pick  spotlight  \\\n",
-       "990 1970-01-01 00:00:01.623992400       False       True   \n",
-       "991 1970-01-01 00:00:01.622005200       False       True   \n",
-       "992 1970-01-01 00:00:01.612850400       False       True   \n",
-       "993 1970-01-01 00:00:01.625720400       False       True   \n",
-       "994 1970-01-01 00:00:01.638856800       False       True   \n",
-       "995 1970-01-01 00:00:01.622350800       False       True   \n",
-       "996 1970-01-01 00:00:01.638252000       False      False   \n",
-       "997 1970-01-01 00:00:01.639116000       False      False   \n",
-       "998 1970-01-01 00:00:01.618117200       False       True   \n",
-       "999 1970-01-01 00:00:01.629262800       False      False   \n",
+       "     spotlight        category & sub-category      category  \\\n",
+       "990       True             film & video/drama  film & video   \n",
+       "991       True                     music/rock         music   \n",
+       "992       True             film & video/drama  film & video   \n",
+       "993       True  photography/photography books   photography   \n",
+       "994       True        publishing/translations    publishing   \n",
+       "995       True               food/food trucks          food   \n",
+       "996      False                  theater/plays       theater   \n",
+       "997      False                  theater/plays       theater   \n",
+       "998       True               music/indie rock         music   \n",
+       "999      False               food/food trucks          food   \n",
        "\n",
-       "           category & sub-category      category        subcategory  \\\n",
-       "990             film & video/drama  film & video              drama   \n",
-       "991                     music/rock         music               rock   \n",
-       "992             film & video/drama  film & video              drama   \n",
-       "993  photography/photography books   photography  photography books   \n",
-       "994        publishing/translations    publishing       translations   \n",
-       "995               food/food trucks          food        food trucks   \n",
-       "996                  theater/plays       theater              plays   \n",
-       "997                  theater/plays       theater              plays   \n",
-       "998               music/indie rock         music         indie rock   \n",
-       "999               food/food trucks          food        food trucks   \n",
-       "\n",
-       "    category_id subcategory_id  \n",
-       "990        5cat        7subcat  \n",
-       "991        2cat        2subcat  \n",
-       "992        5cat        7subcat  \n",
-       "993        8cat       15subcat  \n",
-       "994        6cat       19subcat  \n",
-       "995        1cat        1subcat  \n",
-       "996        4cat        4subcat  \n",
-       "997        4cat        4subcat  \n",
-       "998        2cat        8subcat  \n",
-       "999        1cat        1subcat  "
+       "           subcategory category_id subcategory_id  \n",
+       "990              drama        5cat        7subcat  \n",
+       "991               rock        2cat        2subcat  \n",
+       "992              drama        5cat        7subcat  \n",
+       "993  photography books        8cat       15subcat  \n",
+       "994       translations        6cat       19subcat  \n",
+       "995        food trucks        1cat        1subcat  \n",
+       "996              plays        4cat        4subcat  \n",
+       "997              plays        4cat        4subcat  \n",
+       "998         indie rock        2cat        8subcat  \n",
+       "999        food trucks        1cat        1subcat  "
       ]
      },
      "execution_count": 19,
@@ -1738,8 +1729,8 @@
        "      <td>0</td>\n",
        "      <td>CA</td>\n",
        "      <td>CAD</td>\n",
-       "      <td>1970-01-01 00:00:01.581573600</td>\n",
-       "      <td>1970-01-01 00:00:01.614578400</td>\n",
+       "      <td>2020-02-13</td>\n",
+       "      <td>2021-03-01</td>\n",
        "      <td>1cat</td>\n",
        "      <td>1subcat</td>\n",
        "    </tr>\n",
@@ -1755,8 +1746,8 @@
        "      <td>158</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.611554400</td>\n",
-       "      <td>1970-01-01 00:00:01.621918800</td>\n",
+       "      <td>2021-01-25</td>\n",
+       "      <td>2021-05-25</td>\n",
        "      <td>2cat</td>\n",
        "      <td>2subcat</td>\n",
        "    </tr>\n",
@@ -1772,8 +1763,8 @@
        "      <td>1425</td>\n",
        "      <td>AU</td>\n",
        "      <td>AUD</td>\n",
-       "      <td>1970-01-01 00:00:01.608184800</td>\n",
-       "      <td>1970-01-01 00:00:01.640844000</td>\n",
+       "      <td>2020-12-17</td>\n",
+       "      <td>2021-12-30</td>\n",
        "      <td>3cat</td>\n",
        "      <td>3subcat</td>\n",
        "    </tr>\n",
@@ -1789,8 +1780,8 @@
        "      <td>24</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.634792400</td>\n",
-       "      <td>1970-01-01 00:00:01.642399200</td>\n",
+       "      <td>2021-10-21</td>\n",
+       "      <td>2022-01-17</td>\n",
        "      <td>2cat</td>\n",
        "      <td>2subcat</td>\n",
        "    </tr>\n",
@@ -1806,8 +1797,8 @@
        "      <td>53</td>\n",
        "      <td>US</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1970-01-01 00:00:01.608530400</td>\n",
-       "      <td>1970-01-01 00:00:01.629694800</td>\n",
+       "      <td>2020-12-21</td>\n",
+       "      <td>2021-08-23</td>\n",
        "      <td>4cat</td>\n",
        "      <td>4subcat</td>\n",
        "    </tr>\n",
@@ -1830,19 +1821,19 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency                 launched_date  \\\n",
-       "0      failed              0      CA      CAD 1970-01-01 00:00:01.581573600   \n",
-       "1  successful            158      US      USD 1970-01-01 00:00:01.611554400   \n",
-       "2  successful           1425      AU      AUD 1970-01-01 00:00:01.608184800   \n",
-       "3      failed             24      US      USD 1970-01-01 00:00:01.634792400   \n",
-       "4      failed             53      US      USD 1970-01-01 00:00:01.608530400   \n",
+       "      outcome  backers_count country currency launched_date    end_date  \\\n",
+       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
+       "1  successful            158      US      USD    2021-01-25  2021-05-25   \n",
+       "2  successful           1425      AU      AUD    2020-12-17  2021-12-30   \n",
+       "3      failed             24      US      USD    2021-10-21  2022-01-17   \n",
+       "4      failed             53      US      USD    2020-12-21  2021-08-23   \n",
        "\n",
-       "                       end_date category_id subcategory_id  \n",
-       "0 1970-01-01 00:00:01.614578400        1cat        1subcat  \n",
-       "1 1970-01-01 00:00:01.621918800        2cat        2subcat  \n",
-       "2 1970-01-01 00:00:01.640844000        3cat        3subcat  \n",
-       "3 1970-01-01 00:00:01.642399200        2cat        2subcat  \n",
-       "4 1970-01-01 00:00:01.629694800        4cat        4subcat  "
+       "  category_id subcategory_id  \n",
+       "0        1cat        1subcat  \n",
+       "1        2cat        2subcat  \n",
+       "2        3cat        3subcat  \n",
+       "3        2cat        2subcat  \n",
+       "4        4cat        4subcat  "
       ]
      },
      "execution_count": 20,
@@ -1964,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2060,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2095,7 +2086,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2107,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2217,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2352,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2374,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2378,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2399,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
